# douyin-downloader

./: .gitignore  README.md  downloader.py  downloader_v2.py  get_cookie.py  manual_login_cookie.py
apiproxy/douyin/: douyin.py
apiproxy/douyin/auth/: browser_cookies.py
apiproxy/douyin/core/: download_logger.py
dy-downloader/: .gitignore  API_FIX_REPORT.md  CHANGELOG.md  COOKIE_GUIDE.md  DOWNLOAD_SCENARIOS.md  FINAL_TEST_REPORT.md  GIT_COMMIT_MESSAGE.txt  LICENSE  PROJECT_REVIEW_REPORT.md  PROJECT_SUMMARY.md  SCENARIOS_TEST_REPORT.md  SUCCESS_REPORT.md  __main__.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_config_post.yml  快速使用指南.md  最终完成报告.md  项目审查完成报告.txt
dy-downloader/auth/: cookie_manager.py
dy-downloader/cli/: main.py
dy-downloader/config/: default_config.py
dy-downloader/core/: api_client.py  downloader_base.py  user_downloader.py
dy-downloader/storage/: file_manager.py
dy-downloader/tools/: auto_cookie.py  cookie_fetcher.py  mstoken_generator.py
dy-downloader/utils/: __init__.py  logger.py  validators.py
parsing_service/: API_DOCUMENTATION.md  app.py  simple_test.py  test_enhanced_api.py  test_video_direct.py
parsing_service/strategies/: api_strategy.py  enhanced_api_strategy.py
parsing_service/utils/: cache_manager.py
